--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"> {{content-for "head"}}
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/gains.css"> {{content-for "head-footer"}}
+    <link href='https://fonts.googleapis.com/css?family=Ultra|Kanit' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
