added animated icons

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/gains.css"> {{content-for "head-footer"}}
     <link href='https://fonts.googleapis.com/css?family=Ultra|Kanit' rel='stylesheet' type='text/css'>
+    <script src="//cdn.jsdelivr.net/mojs/latest/mo.min.js" defer></script>
 </head>
 
 <body>
